# bitrate-ladder

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AV1_VMAF_FIX_PROCESS.md  GUI_COMPARE.md  GUI_COMPARE_PLAN.md  PLAN.md
examples/: EXAMPLE_USAGES.md  README.md
examples/configs/: basic_h264.json  compare_ready.json  minimal_av1.json  multi_resolution_codecs.json
scripts/: check_all.sh  install_hooks.sh
src/bitrate_ladder/: __init__.py  cli.py  config.py  encode.py  ladder.py  metrics.py  plots.py  report.py  vmaf.py
src/bitrate_ladder/compare/: cli.py  models.py  preprocess.py  server.py  session.py
src/bitrate_ladder/compare/static/: app.js  index.html  styles.css
tests/: test_cli.py  test_compare_preprocess.py  test_compare_session.py  test_config.py  test_integration_ffmpeg.py  test_ladder.py  test_plots.py  test_report.py
web/compare/: eslint.config.js  index.html  package.json  tsconfig.json
web/compare/src/: main.ts  mode.ts
web/compare/tests/: mode.test.ts
