[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitrate-ladder"
version = "0.1.0"
description = "CLI tool for generating bitrate ladders using VMAF convex-hull selection."
readme = "docs/PLAN.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
plots = ["matplotlib>=3.8"]
dev = ["pytest>=9.0"]

[project.scripts]
bitrate-ladder = "bitrate_ladder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: end-to-end tests requiring local ffmpeg/libvmaf",
]
