[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitrate-ladder"
version = "0.1.0"
description = "CLI tool for generating bitrate ladders using VMAF convex-hull selection."
readme = "docs/PLAN.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
plots = ["matplotlib>=3.8"]
compare = [
    "fastapi>=0.116.0",
    "pydantic>=2.11.0",
    "uvicorn>=0.35.0",
]
dev = [
    "pytest>=9.0",
    "black>=25.1.0",
    "mypy>=1.14.1",
    "pre-commit>=4.1.0",
    "ruff>=0.9.6",
    "types-PyYAML>=6.0.12.20241230",
]

[project.scripts]
bitrate-ladder = "bitrate_ladder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bitrate_ladder.compare" = ["static/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: end-to-end tests requiring local ffmpeg/libvmaf",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["bitrate_ladder"]

[tool.mypy]
python_version = "3.11"
files = ["src/bitrate_ladder"]
explicit_package_bases = true
mypy_path = "src"
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
pretty = true

[[tool.mypy.overrides]]
module = ["fastapi", "fastapi.*", "pydantic", "pydantic.*", "uvicorn"]
ignore_missing_imports = true
